# nf-docs

./: .gitignore  .pre-commit-config.yaml  .prettierignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  README.md  pyproject.toml  tailwind.config.js  zensical.toml
.github/workflows/: ci.yml  docs.yml  publish.yml
build-assets/: build-tailwind.sh  input.css  package-lock.json  package.json
docs/: examples.md  index.md  installation.md  running.md  writing.md
docs/examples/hello/: index.html
docs/examples/hello/markdown/: index.md  inputs.md  processes.md  workflows.md
docs/examples/hello/table/: README.md
docs/examples/hello/yaml/: pipeline-api.yaml
docs/examples/nf-fgsv/: index.html
docs/examples/nf-fgsv/json/: pipeline-api.json
docs/examples/nf-fgsv/markdown/: index.md  inputs.md  processes.md  workflows.md
docs/examples/nf-fgsv/table/: README.md
docs/examples/nf-fgsv/yaml/: pipeline-api.yaml
docs/examples/rnaseq-nf/: index.html
docs/examples/rnaseq-nf/json/: pipeline-api.json
docs/examples/rnaseq-nf/markdown/: index.md  inputs.md  processes.md  workflows.md
docs/examples/rnaseq-nf/table/: README.md
docs/examples/rnaseq-nf/yaml/: pipeline-api.yaml
docs/examples/rnavar/markdown/: functions.md  index.md  inputs.md  processes.md  workflows.md
docs/examples/rnavar/table/: README.md
docs/examples/rnavar/yaml/: pipeline-api.yaml
docs/examples/sarek/json/: pipeline-api.json
docs/examples/sarek/markdown/: functions.md  index.md  inputs.md  processes.md  workflows.md
docs/examples/sarek/table/: README.md
docs/examples/sarek/yaml/: pipeline-api.yaml
docs/examples/wf-metagenomics/: index.html
docs/examples/wf-metagenomics/json/: pipeline-api.json
docs/examples/wf-metagenomics/markdown/: config.md  functions.md  index.md  inputs.md  processes.md  workflows.md
docs/examples/wf-metagenomics/table/: README.md
docs/examples/wf-metagenomics/yaml/: pipeline-api.yaml
examples/: example_context.json  example_template.html
examples/html/hello/: index.html
examples/html/rnaseq-nf/: index.html
examples/html/rnavar/: index.html
examples/html/wf-metagenomics/: index.html
examples/json/hello/: pipeline-api.json
examples/json/rnaseq-nf/: pipeline-api.json
examples/json/rnavar/: pipeline-api.json
examples/json/sarek/: pipeline-api.json
examples/json/wf-metagenomics/: pipeline-api.json
examples/markdown/hello/: index.md  inputs.md  processes.md  workflows.md
examples/markdown/rnaseq-nf/: index.md  inputs.md  processes.md  workflows.md
examples/markdown/rnavar/: functions.md  index.md  inputs.md  processes.md  workflows.md
examples/markdown/sarek/: functions.md  index.md  inputs.md  processes.md  workflows.md
examples/markdown/wf-metagenomics/: config.md  functions.md  index.md  inputs.md  processes.md  workflows.md
scripts/: generate_readme_screenshots.py
src/nf_docs/: __init__.py  cache.py  cli.py  config.py  config_parser.py  extractor.py  generation_info.py  git_utils.py  lsp_client.py  meta_parser.py  models.py  nextflow_env.py  nf_parser.py  progress.py  schema_parser.py  tailwind.py
src/nf_docs/renderers/: __init__.py  base.py  concise.py  html.py  json.py  markdown.py  table.py  yaml.py
src/nf_docs/templates/: html.html  tailwind.css
tests/: __init__.py  conftest.py  test_cache.py  test_cli.py  test_config.py  test_extractor.py  test_meta_parser.py  test_models.py  test_nf_parser.py  test_renderers.py  test_schema_parser.py
