[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nf-docs"
version = "0.1.0"
description = "Generate API documentation for Nextflow pipelines by querying the Nextflow Language Server"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "nf-docs contributors" }
]
keywords = [
    "nextflow",
    "documentation",
    "bioinformatics",
    "pipeline",
    "lsp",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Documentation",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "click>=8.0",
    "pyyaml>=6.0",
    "jinja2>=3.0",
    "rich>=13.0",
    "httpx>=0.25",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.21",
    "black>=23.0",
    "ruff>=0.1",
    "mypy>=1.0",
    "types-PyYAML",
]

[project.scripts]
nf-docs = "nf_docs.cli:main"

[project.urls]
Homepage = "https://github.com/nextflow-io/nf-docs"
Documentation = "https://github.com/nextflow-io/nf-docs#readme"
Repository = "https://github.com/nextflow-io/nf-docs"
Issues = "https://github.com/nextflow-io/nf-docs/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/nf_docs"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
