[project]
name = "nf-docs"
version = "0.1.0"
description = "Generate API documentation for Nextflow pipelines by querying the Nextflow Language Server"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "nf-docs contributors" }
]
keywords = [
    "nextflow",
    "documentation",
    "bioinformatics",
    "pipeline",
    "lsp",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Documentation",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "rich-click>=1.7",
    "pyyaml>=6.0",
    "jinja2>=3.0",
    "rich>=13.0",
    "httpx>=0.25",
    "markdown>=3.0",
    "pygments>=2.0",
    "pygments-csv-lexer>=0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.1",
    "ty>=0.0.1a0",
]
screenshots = [
    "playwright>=1.40",
    "pillow>=10.0",
]

[project.scripts]
nf-docs = "nf_docs.cli:main"
nf-docs-tailwind = "nf_docs.tailwind:main"

[project.urls]
Homepage = "https://github.com/ewels/nf-docs"
Documentation = "https://github.com/ewels/nf-docs#readme"
Repository = "https://github.com/ewels/nf-docs"
Issues = "https://github.com/ewels/nf-docs/issues"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by ruff format)
]

[tool.ruff.format]
docstring-code-format = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
